--- a/pc2/Views/Shared/_Layout.cshtml
+++ b/pc2/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-         Deyane Quispe 
+         Dayane Quispe 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
